# PythonWEB-PhotoShare

./: .env.example  LICENSE  Procfile  Prockfile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 012b55aab0a5_bugfix_user_password.py  12de0abd0075_photomodel_cascade_delete.py  4d9a03585c27_photomodel_commentmodel_add_editor_.py  50d069dd9f67_add_all_basic_models.py  7d1408c45fd4_photomodel_and_commentmodel_add_editor_.py  7eaa7d4e0b7d_init.py  a9cee740f5d3_photomodel_add_public_id.py  aa06e1e7986e_bugfix_user_and_blacklist.py
src/conf/: config.py  messages.py
src/dependencies/: database.py
src/models/: BlacklistTokenModel.py  __init__.py  base.py  photos.py  users.py
src/repositories/: comments.py  photos.py  rating.py  tags.py  users.py
src/routers/: auth.py  cloudinary.py  images.py  photos.py  users.py
src/schemas/: comment.py  email.py  photos.py  rating.py  transform.py  unified.py  users.py
src/services/: auth.py  cloudinary.py  comments.py  email.py  photos.py  qr.py  rating.py  roles.py  tags.py
src/services/templates/: new_password.html  (+3 more)
src/templates/: index.html
tests/: conftest.py  test_e2e_auth.py  test_e2e_auth_confirm_email.py  test_e2e_auth_login.py  test_e2e_auth_logout.py  test_e2e_auth_register.py  test_e2e_auth_request_password_reset.py  test_e2e_photos_delete_comment.py  test_e2e_photos_delete_photo.py  test_e2e_photos_photos_id.py  test_e2e_photos_set_rate.py  test_e2e_photos_transform_photo.py  test_e2e_routers_photos_photos.py  test_e2e_routers_photos_rating_set.py  test_e2e_routers_users.py  test_e2e_users_profile.py
